# langchain-chat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.claude/commands/: build-fix.md  dev.md
.claude/rules/: async-database.md  project-structure.md
alembic/: env.py
alembic/versions/: 207e161c145e_create_chat_sessions_and_chat_messages.py  4292d1e26dc7_create_users_table.py  aa47109e820f_add_composite_index_on_chat_sessions_.py  ab24cb2d24e5_add_composite_index_on_chat_sessions_.py
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py
app/api/common/: __init__.py  auth_router.py
app/api/v1/: chat_router.py  conversation_router.py
app/core/: __init__.py  config.py  database.py  exceptions.py  middleware.py  redis.py  security.py
app/core/settings/: __init__.py  app_config.py  auth_config.py  database_config.py  file_upload_config.py  llm_config.py  redis_config.py  server_config.py  vector_store_config.py
app/models/: chat_message.py  chat_session.py  user.py
app/repositories/: chat_repo.py  user_repo.py
app/schemas/: __init__.py  auth_schema.py  chat_schema.py  conversation_schema.py  response_schema.py
app/services/: agent_service.py  auth_service.py  chat_title_task.py  conversation_service.py  title_service.py  token_service.py
app/tools/: __init__.py  web_search.py
docs/: db-pk-strategy.md
scripts/: create_admin.py  generate_openapi.py
tests/: conftest.py
tests/integration/: test_auth_middleware.py  test_auth_router.py  test_chat_router.py  test_conversation_router.py
tests/unit/: test_agent_service.py  test_auth_config.py  test_auth_schema.py  test_auth_service.py  test_chat_repo.py  test_chat_schema.py  test_config.py  test_conversation_schema.py  test_conversation_service.py  test_exceptions.py  test_security.py  test_title_service.py  test_token_service.py  test_user_repo.py  test_web_search.py
