[project]
name = "langchain-chat"
version = "0.1.0"
description = "LangChain 기반 채팅 서비스 - 웹검색, 파일 처리(RAG) 지원"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    # LangChain Core
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # LLM Providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    # Vector Store
    "faiss-cpu>=1.8.0",
    # Document Processing
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    # Web Search
    "ddgs>=6.0.0",
    # Web UI
    "chainlit>=1.0.0",
    # Utilities
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    # Auth
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    # Validation
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=80"
